# fabricate

./: .envtemplate  .gitignore  BakLLaVA  README.md  datastore  docker-compose.yml  setup.sh
.github/workflows/: node.js.yml
backend/: Dockerfile  backend_pre_start.py  caption.py  config.py  config.yaml  image_router.py  image_watcher.py  lifecycle.py  main.py  model_manager.py  prestart.sh  pyproject.toml  requirements.txt  run.sh  storage.py
backend/configs/: config.example.yaml
backend/fabricate_server/: caption.py  config.py  image_router.py  image_watcher.py  lifecycle.py  main.py  storage.py
backend/fabricateserver/: caption.py  image_router.py  lifecycle.py  main.py  session.py
backend/fabricateserver/api/: image_router.py  routers.py
backend/fabricateserver/config/: Config.py  __init__.py  logging.py  manager.py  middleware.py
backend/fabricateserver/db/: storage.py
backend/fabricateserver/mount/: image_watcher.py  mount.py
backend/fabricateserver/schema/: __init__.py  image_model.py
backend/models/: image_model.py
backend/requirements/: requirements-ai.in  requirements.in
backend/scripts/: backend_pre_start.py  prestart.sh  run.sh
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
model_worker/models/: caption.py  model_manager.py
webui/: .envtemplate  Dockerfile  package-lock.json  package.json  run_webui.sh  tsconfig.json  vite.config.ts
webui/src/: App.vue  main.ts  types.ts
webui/tests/: setup.ts
(+23 files in other folders)
